--- a/app/_locales/uk/messages.json
+++ b/app/_locales/uk/messages.json
@@ -1,44 +1,62 @@
 {
 	"appName": {
-		"message": "YouTube Auto Like",
-		"description": "Ім'я допоміжного застосунку"
+		"message": "Автоматична відмітка YouTube",
+		"description": "Назва програми"
 	},
 	"appDesc": {
-		"message": "Самовподобування видив ТиТрубу з числа твоїх улюблених творців.",
-		"description": "Опис застосунку"
+		"message": "Автоматично не подобається відео YouTube від ваших найменш улюблених творців вмісту.",
+		"description": "Опис програми"
 	},
 	"appDescDetail": {
-		"message": "Цей допоміжний застосунок лише тицяє вподобайку кожного разу, коли ти переглядаєш видиво творця, на якого ти підписаний. Жодних власних зусиль. Жодних реєстрацій і долучань. Або, за твоїм бажанням, застосунок може класти вподобайки під усіма видивами, які ти переглядаєш. Чому так ? Бозна. Жартома. Запропонуй своє бачення дій цього застосунку або зроби свій внесок:",
-		"description": "Детальнійший опис на сторінці розповсюдження застосунку"
+		"message": "Усе, що робить це розширення, — це натискати кнопку не подобається щоразу, коли ви переглядаєте відео з каналу, на який ви підписалися. Ніяких зусиль не потрібно. Немає необхідності автентифікації. Крім того, ви можете автоматично лайкати КОЖНЕ відео. Чому? Я не знаю. Збожеволіти. Не соромтеся пропонувати нові функції або робити внески:",
+		"description": "Детальний опис сторінки веб-магазину"
 	},
 	"optLikeSub": {
-		"message": "Вподобувати лише видива з підписок"
+		"message": "Не подобається лише відео з каналів, на які ви підписалися"
 	},
 	"optLikeAll": {
-		"message": "Вподобувати усі видива"
+		"message": "Не подобається всім відео"
 	},
 	"optLikeNone": {
 		"message": "Вимкнути"
 	},
-	"optLikeInstant" : {
-		"message": "Вподобувати негайно"
+	"optLikeInstant": {
+		"message": "Миттєво не подобається"
 	},
 	"optLikeCustom": {
-		"message": "Особистий лічильник"
+		"message": "Власний таймер"
 	},
 	"optLikePercentage": {
-		"message": "На відсотку"
+		"message": "Відсоток"
 	},
-	"optLikeMinutes" :{
-		"message": "На хвилині"
+	"optLikeMinutes": {
+		"message": "Хвилини"
 	},
-	"optLikeRandom" :{
-		"message": "Обирати випадково"
+	"optLikeRandom": {
+		"message": "Випадковий таймер"
+	},
+	"optUseList": {
+		"message": "Використати список"
+	},
+	"optBlackList": {
+		"message": "Режим списку блокувань"
+	},
+	"optWhiteList": {
+		"message": "Режим списку дозволених"
+	},
+	"optWhiteListWarning": {
+		"message": "⚠️ список порожній, нічого не буде не подобається"
 	},
 	"linkDonate": {
-		"message": "Підтримай грошима"
+		"message": "Пожертвувати"
 	},
 	"linkContribute": {
-		"message": "Візьми участь"
+		"message": "Внести свій внесок"
+	},
+	"mngName": {
+		"message": "Назва каналу"
+	},
+	"mngURL": {
+		"message": "URL-адреса каналу"
 	}
 }
