--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1,27 +1,27 @@
 {
 	"appName": {
-		"message": "YouTube Auto Like",
+		"message": "YouTube Auto DisLike",
 		"description": "Name of the application"
 	},
 	"appDesc": {
-		"message": "Automagically like YouTube videos from your favorite content creators.",
+		"message": "Automagically dislike YouTube videos from your least favorite content creators.",
 		"description": "Description of the application"
 	},
 	"appDescDetail": {
-		"message": "All this extension does is hammer the like button whenever you watch a video from a subscribed channel. No effort required. No need to authenticate. Alternatively, you can automatically like EVERY video. Why? I dunno. Go nuts. Feel free to suggest new features or contribute:",
+		"message": "All this extension does is hammer the dislike button whenever you watch a video from a subscribed channel. No effort required. No need to authenticate. Alternatively, you can automatically like EVERY video. Why? I dunno. Go nuts. Feel free to suggest new features or contribute:",
 		"description": "Detail description for the web store page"
 	},
 	"optLikeSub": {
-		"message": "Like only videos from subscribed channels"
+		"message": "DisLike only videos from subscribed channels"
 	},
 	"optLikeAll": {
-		"message": "Like all videos"
+		"message": "DisLike all videos"
 	},
 	"optLikeNone": {
 		"message": "Disable"
 	},
 	"optLikeInstant": {
-		"message": "Instant Like"
+		"message": "Instant DisLike"
 	},
 	"optLikeCustom": {
 		"message": "Custom timer"
@@ -45,7 +45,7 @@
 		"message": "Allow list mode"
 	},
 	"optWhiteListWarning": {
-		"message": "⚠️ list is empty, nothing will be liked"
+		"message": "⚠️ list is empty, nothing will be disliked"
 	},
 	"linkDonate": {
 		"message": "Donate"
