--- a/app/_locales/nl/messages.json
+++ b/app/_locales/nl/messages.json
@@ -1,50 +1,62 @@
 {
   "appName": {
-    "message": "YouTube Auto Like",
-    "description": "Naam van de applicatie"
+    "message": "YouTube Auto DisLike",
+    "description": "Naam van de toepassing"
   },
   "appDesc": {
-    "message": "Liked de YouTube videos van je favoriete content makers automagisch.",
-    "description": "Beschrijving van de applicatie"
+    "message": "Automatisch een hekel aan YouTube-video's van je minst favoriete contentmakers.",
+    "description": "Beschrijving van de toepassing"
   },
   "appDescDetail": {
-    "message": "Het enige wat deze extensie doet, is het indrukken van de like knop van videos van kanalen waarop je bent geabonneerd. Geen inspanning vereist. Geen authenticatie vereist. Je kunt zelfs ELKE video liken. Waarom? Geen idee. Ga los. Schroom niet om suggesties achter te laten:",
-    "description": "Beschrijving voor de winkel pagina"
-  },
-  "optLikeWhatTitle": {
-    "message": "Welche videos?"
-  },
-  "optLikeWhenTitle": {
-    "message": "Wie schnell?"
+    "message": "Het enige wat deze extensie doet, is op de 'dislike'-knop drukken wanneer je een video van een geabonneerd kanaal bekijkt. Geen inspanning vereist. Je hoeft je niet te authenticeren. Je kunt ook automatisch ELKE video leuk vinden. Waarom? Ik weet het niet. Word gek. Stel gerust nieuwe functies voor of draag bij:",
+    "description": "Detailbeschrijving voor de webwinkelpagina"
   },
   "optLikeSub": {
-    "message": "Vindt videos alleen leuk van geabonneerde kanalen"
+    "message": "Alleen video's van geabonneerde kanalen niet leuk vinden"
   },
   "optLikeAll": {
-    "message": "Vindt alle videos leuk"
+    "message": "Vind ik niet leuk aan alle video's"
   },
   "optLikeNone": {
-    "message": "Schakel uit"
+    "message": "Uitschakelen"
   },
   "optLikeInstant": {
-    "message": "Sofort"
+    "message": "Onmiddellijke afkeer"
   },
   "optLikeCustom": {
-    "message": "Custom timer"
+    "message": "Aangepaste timer"
   },
   "optLikePercentage": {
     "message": "Percentage"
   },
-  "optLikeMinutes" :{
-    "message": "Minutes"
+  "optLikeMinutes": {
+    "message": "Minuten"
   },
-  "optLikeRandom" :{
-    "message": "Random timer"
+  "optLikeRandom": {
+    "message": "Willekeurige timer"
+  },
+  "optUseList": {
+    "message": "Gebruik lijst"
+  },
+  "optBlackList": {
+    "message": "Bloklijstmodus"
+  },
+  "optWhiteList": {
+    "message": "Lijstmodus toestaan"
+  },
+  "optWhiteListWarning": {
+    "message": "⚠️ lijst is leeg, niets wordt niet leuk gevonden"
   },
   "linkDonate": {
     "message": "Doneer"
   },
   "linkContribute": {
     "message": "Bijdragen"
+  },
+  "mngName": {
+    "message": "Kanaalnaam"
+  },
+  "mngURL": {
+    "message": "Kanaal-URL"
   }
 }
